--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
           - config: ./configs/gtvhacker/defconfig
             rootfs: ./rootfs/gtvhacker
             logo: ./logo/gtvhacker.png
+            
+          - config: ./configs/rndis/defconfig
           
           - config: ./configs/j49/release_defconfig
           - config: ./configs/diamond/release_defconfig
