Try a couple different cpio methods

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,16 @@ jobs:
           - config: ./configs/gtvhacker/defconfig
             rootfs: ./rootfs/gtvhacker
             logo: ./logo/gtvhacker.png
+
+          - name: gtvhacker_original_cpio
+            config: ./configs/gtvhacker/defconfig
+            rootfs: ./rootfs/nestdfuattack.cpio
+            logo: ./logo/gtvhacker.png
+
+          - name: gtvhacker_original_repacked
+            config: ./configs/gtvhacker/defconfig
+            rootfs: ./rootfs/repacked.cpio
+            logo: ./logo/gtvhacker.png
             
           - config: ./configs/rndis/defconfig
           
