Refactor cpio build to use fakeroot and allow per-rootfs folders.txt

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,99 @@
 initramfs_data.cpio
 Makefile.NN
+**/dev/console
+**/dev/fb0
+**/dev/full
+**/dev/i2c-0
+**/dev/i2c-1
+**/dev/i2c-2
+**/dev/i2c-3
+**/dev/kmem
+**/dev/kmsg
+**/dev/loop0
+**/dev/loop1
+**/dev/loop2
+**/dev/loop3
+**/dev/loop4
+**/dev/loop5
+**/dev/loop6
+**/dev/loop7
+**/dev/mem
+**/dev/mmcblk0
+**/dev/mmcblk0p1
+**/dev/mmcblk0p2
+**/dev/mmcblk0p3
+**/dev/mtd0
+**/dev/mtd1
+**/dev/mtd2
+**/dev/mtd3
+**/dev/mtd4
+**/dev/mtd5
+**/dev/mtd6
+**/dev/mtd7
+**/dev/mtd8
+**/dev/mtd9
+**/dev/mtd10
+**/dev/mtd11
+**/dev/mtd12
+**/dev/mtd13
+**/dev/mtd14
+**/dev/mtd15
+**/dev/mtdblock0
+**/dev/mtdblock1
+**/dev/mtdblock2
+**/dev/mtdblock3
+**/dev/mtdblock4
+**/dev/mtdblock5
+**/dev/mtdblock6
+**/dev/mtdblock7
+**/dev/mtdblock8
+**/dev/mtdblock9
+**/dev/mtdblock10
+**/dev/mtdblock11
+**/dev/mtdblock12
+**/dev/mtdblock13
+**/dev/mtdblock14
+**/dev/mtdblock15
+**/dev/mtdblock16
+**/dev/null
+**/dev/ptmx
+**/dev/ram0
+**/dev/ram1
+**/dev/ram2
+**/dev/ram3
+**/dev/ram4
+**/dev/ram5
+**/dev/ram6
+**/dev/ram7
+**/dev/ram8
+**/dev/ram9
+**/dev/ram10
+**/dev/ram11
+**/dev/ram12
+**/dev/ram13
+**/dev/ram14
+**/dev/ram15
+**/dev/random
+**/dev/rfkill
+**/dev/rtc0
+**/dev/tty
+**/dev/tty0
+**/dev/tty1
+**/dev/tty2
+**/dev/tty3
+**/dev/tty4
+**/dev/tty5
+**/dev/tty6
+**/dev/tty7
+**/dev/ttyGS0
+**/dev/ttyO0
+**/dev/ttyO1
+**/dev/ttyO2
+**/dev/ttyO3
+**/dev/urandom
+**/dev/watchdog
+**/dev/zero
+**/dev/input/event0
+**/dev/input/event1
+**/dev/input/event2
+**/dev/input/event3
