--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
           
           sudo apt update
           sudo apt install -y \
+            fakeroot \
             cpio \
             u-boot-tools \
             netpbm
